--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,11 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>2.3.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>dev.samstevens.totp</groupId>
+            <artifactId>totp</artifactId>
+            <version>1.6</version>
+        </dependency>
 
 
     </dependencies>
