--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
             <version>4.7.0-9.1.2</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
@@ -129,7 +130,11 @@
             <artifactId>stripe-java</artifactId>
             <version>24.17.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
             <artifactId>core</artifactId>
